--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -73,6 +73,7 @@ h3,
 h4,
 h5,
 h6 {
+  color: #55acee;
   margin: 20px 0 10px;
   padding: 0;
   font-weight: bold;
@@ -373,6 +374,7 @@ h2+h1 {
   margin-bottom: 10px;
   text-align: center;
   page-break-before: avoid;
+  color: #55acee;
 }
 
 
