--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Gerard Braad</title>
+        <meta name="description" content="Gerard Braad - Resume">
+        <meta name="HandheldFriendly" content="True">
+        <meta http-equiv="cleartype" content="on">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
         <style>
 * {
   margin: 0;
@@ -112,7 +116,6 @@ h6 code {
 
 h1 {
   font-size: 20px;
-  color: #000;
   margin-top: 42px;
   margin-bottom: 18px;
   /* resume specific */
@@ -124,7 +127,6 @@ h2 {
   /* resume specific
   border-bottom: 1px solid #ccc;
   */
-  color: #000;
   margin-top: 32px;
   margin-bottom: 12px;
 }
