Only change h1 inside title section div

--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -369,7 +369,7 @@ h2+h1 {
   page-break-before: avoid;
 }
 
-#gerard-braad {
+#gerard-braad h1 {
   /* h1 */
   font-size: 34px;
   text-transform: uppercase;
