--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -375,12 +375,22 @@ h2+h1 {
   text-transform: uppercase;
   margin-bottom: 10px;
   text-align: center;
-  page-break-before: avoid;
   color: #55acee;
 }
 
+section#gerard-braad {
+  page-break-before: avoid;
+}
 
-#honors-and-recognition {
+section#employment-history {
+  page-break-before: avoid;
+}
+
+section#education {
+  page-break-before: avoid;
+}
+
+section#honors-and-recognition {
   page-break-before: avoid;
 }
 
