--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -119,7 +119,7 @@ h1 {
   margin-top: 42px;
   margin-bottom: 18px;
   /* resume specific */
-  page-break-before: always;
+  /*page-break-before: always;*/
 }
 
 h2 {
@@ -383,11 +383,11 @@ section#gerard-braad {
 }
 
 section#employment-history {
-  page-break-before: avoid;
+  page-break-before: always
 }
 
 section#education {
-  page-break-before: avoid;
+  page-break-before: always;
 }
 
 section#honors-and-recognition {
